--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "extern/cqcppsdk"]
 	path = extern/cqcppsdk
 	url = https://github.com/cqmoe/cqcppsdk.git
+[submodule "extern/cpr"]
+	path = extern/cpr
+	url = git@github.com:whoshuu/cpr.git
